--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -1,5 +1,7 @@
-.text-left {
-  text-align: left;
+.text {
+  &-left {
+    text-align: left;
+  }
   &-center {
     text-align: center;
   }
